image further optimized

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </li>
         <li>
           <a href="https://www.behance.net/gallery/225249403/AESTE-Reed-Diffusers" target="_blank">
-            <img src="/assets/designs/for website-aeste.png" alt="Design 15">
+            <img src="/assets/designs/for website-16.png.png" alt="Design 15">
           </a>
         </li>
         
