i guess it's final

--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
 
   <!-- Hero Section -->
   <section id="hero" class="section">
-    <h1><span>Bringing Your Brand to Life, <br>One Box at a Time</span></h1>
-    <p>Sweet and thoughtful packaging design that makes your products pop and your customers smile.</p>
+    <div class="hero-content">
+      <h1><span>Bringing Your Brand to Life, <br>One Box at a Time</span></h1>
+      <p>Sweet and thoughtful packaging design that makes your products pop and your customers smile.</p>
+      <a href="apply.html" class="btn">Apply Now</a>
+    </div>
     <div class="mascots">
       <img src="/assets/mascots/mascot-2.png" alt="Mascot 2">
     </div>
-    <a href="apply.html" class="btn">Apply Now</a>
   </section>
+  
+  
 
   <!-- Floating Designs Section -->
   <section id="designs" class="section center">
@@ -159,7 +163,7 @@
         </li>
         <li>
           <a href="https://www.behance.net/gallery/225249403/AESTE-Reed-Diffusers" target="_blank">
-            <img src="/assets/designs/for website-16.png.png" alt="Design 15">
+            <img src="/assets/designs/for website-16.png" alt="Design 15">
           </a>
         </li>
         
