lazy loading added

--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
   <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
-
-  <div id="preloader">
-    <img src="/assets/mascots/mascot-2.png" alt="Loading mascot" class="mascot-loader">
-  </div>
   
 
   <!-- Header -->
@@ -56,46 +52,46 @@
     <h2>Featured Work</h2>
     <div class="floating-gallery-wrapper">
       <div class="floating-gallery">
-        <a href="#"><img src="/assets/designs/for website-01.png" alt="Design 1" /></a>
-        <a href="#"><img src="/assets/designs/for website-02.png" alt="Design 2" /></a>
-        <a href="#"><img src="/assets/designs/for website-03.png" alt="Design 3" /></a>
-        <a href="#"><img src="/assets/designs/for website-04.png" alt="Design 4" /></a>
-        <a href="#"><img src="/assets/designs/for website-05.png" alt="Design 5" /></a>
-        <a href="#"><img src="/assets/designs/for website-06.png" alt="Design 6" /></a>
-        <a href="#"><img src="/assets/designs/for website-07.png" alt="Design 7" /></a>
-        <a href="#"><img src="/assets/designs/for website-08.png" alt="Design 8" /></a>
-        <a href="#"><img src="/assets/designs/for website-09.png" alt="Design 9" /></a>
-        <a href="#"><img src="/assets/designs/for website-10.png" alt="Design 10" /></a>
-        <a href="#"><img src="/assets/designs/for website-11.png" alt="Design 11" /></a>
-        <a href="#"><img src="/assets/designs/for website-12.png" alt="Design 12" /></a>
-        <a href="#"><img src="/assets/designs/for website-13.png" alt="Design 13" /></a>
-        <a href="#"><img src="/assets/designs/for website-14.png" alt="Design 14" /></a>
-        <a href="#"><img src="/assets/designs/for website-15.png" alt="Design 15" /></a>
-        <a href="#"><img src="/assets/designs/for website-16.png" alt="Design 16" /></a>
-        <a href="#"><img src="/assets/designs/for website-17.png" alt="Design 17" /></a>
-        <a href="#"><img src="/assets/designs/for website-18.png" alt="Design 18" /></a>
-        <a href="#"><img src="/assets/designs/for website-19.png" alt="Design 19" /></a>
+        <a href="#"><img src="/assets/designs/for website-01.png" alt="Design 1" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-02.png" alt="Design 2" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-03.png" alt="Design 3" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-04.png" alt="Design 4" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-05.png" alt="Design 5" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-06.png" alt="Design 6" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-07.png" alt="Design 7" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-08.png" alt="Design 8" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-09.png" alt="Design 9" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-10.png" alt="Design 10" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-11.png" alt="Design 11" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-12.png" alt="Design 12" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-13.png" alt="Design 13" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-14.png" alt="Design 14" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-15.png" alt="Design 15" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-16.png" alt="Design 16" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-17.png" alt="Design 17" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-18.png" alt="Design 18" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-19.png" alt="Design 19" loading="lazy"/></a>
   
         <!-- Repeat again for looping -->
-        <a href="#"><img src="/assets/designs/for website-01.png" alt="Design 1" /></a>
-        <a href="#"><img src="/assets/designs/for website-02.png" alt="Design 2" /></a>
-        <a href="#"><img src="/assets/designs/for website-03.png" alt="Design 3" /></a>
-        <a href="#"><img src="/assets/designs/for website-04.png" alt="Design 4" /></a>
-        <a href="#"><img src="/assets/designs/for website-05.png" alt="Design 5" /></a>
-        <a href="#"><img src="/assets/designs/for website-06.png" alt="Design 6" /></a>
-        <a href="#"><img src="/assets/designs/for website-07.png" alt="Design 7" /></a>
-        <a href="#"><img src="/assets/designs/for website-08.png" alt="Design 8" /></a>
-        <a href="#"><img src="/assets/designs/for website-09.png" alt="Design 9" /></a>
-        <a href="#"><img src="/assets/designs/for website-10.png" alt="Design 10" /></a>
-        <a href="#"><img src="/assets/designs/for website-11.png" alt="Design 11" /></a>
-        <a href="#"><img src="/assets/designs/for website-12.png" alt="Design 12" /></a>
-        <a href="#"><img src="/assets/designs/for website-13.png" alt="Design 13" /></a>
-        <a href="#"><img src="/assets/designs/for website-14.png" alt="Design 14" /></a>
-        <a href="#"><img src="/assets/designs/for website-15.png" alt="Design 15" /></a>
-        <a href="#"><img src="/assets/designs/for website-16.png" alt="Design 16" /></a>
-        <a href="#"><img src="/assets/designs/for website-17.png" alt="Design 17" /></a>
-        <a href="#"><img src="/assets/designs/for website-18.png" alt="Design 18" /></a>
-        <a href="#"><img src="/assets/designs/for website-19.png" alt="Design 19" /></a>
+        <a href="#"><img src="/assets/designs/for website-01.png" alt="Design 1" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-02.png" alt="Design 2" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-03.png" alt="Design 3" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-04.png" alt="Design 4" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-05.png" alt="Design 5" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-06.png" alt="Design 6" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-07.png" alt="Design 7" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-08.png" alt="Design 8" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-09.png" alt="Design 9" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-10.png" alt="Design 10" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-11.png" alt="Design 11" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-12.png" alt="Design 12" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-13.png" alt="Design 13" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-14.png" alt="Design 14" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-15.png" alt="Design 15" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-16.png" alt="Design 16" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-17.png" alt="Design 17" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-18.png" alt="Design 18" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-19.png" alt="Design 19" loading="lazy"/></a>
       </div>
     </div>
   </section>
@@ -115,7 +111,7 @@
         <a href="https://www.instagram.com/designsby_sukaina/" target="_blank" class="btn">Follow me on Instagram ✦</a>
       </div>
       <div class="about-image-wrapper">
-        <img src="/assets/designbysukaina/designbysukaina.png" alt="Designer Portrait" class="about-image" />
+        <img src="/assets/designbysukaina/designbysukaina.png" alt="Designer Portrait" class="about-image" loading="lazy" />
       </div>
     </div>
   </section>
@@ -143,32 +139,32 @@
       <ul>
         <li>
           <a href="https://www.behance.net/gallery/224998275/Sando-Japanese-Sandwich-Shop" target="_blank">
-            <img src="/assets/designs/for website-05.png" alt="Design 5">
+            <img src="/assets/designs/for website-05.png" alt="Design 5" loading="lazy">
           </a>
         </li>
         <li>
           <a href="https://www.behance.net/gallery/224997217/Chateau-" target="_blank">
-            <img src="/assets/designs/for website-02.png" alt="Design 2">
+            <img src="/assets/designs/for website-02.png" alt="Design 2" loading="lazy">
           </a>
         </li>
         <li>
           <a href="https://www.behance.net/gallery/219893401/Krumble-Bakehouse-" target="_blank">
-            <img src="/assets/designs/for website-06.png" alt="Design 6">
+            <img src="/assets/designs/for website-06.png" alt="Design 6" loading="lazy">
           </a>
         </li>
         <li>
           <a href="https://www.behance.net/gallery/225001045/ORYN-organic-skincare-" target="_blank">
-            <img src="/assets/designs/for website-14.png" alt="Design 14">
+            <img src="/assets/designs/for website-14.png" alt="Design 14" loading="lazy">
           </a>
         </li>
         <li>
           <a href="https://www.behance.net/gallery/197459517/BREW-LAB-Coffee-Cafe" target="_blank">
-            <img src="/assets/designs/for website-19.png" alt="Design 19">
+            <img src="/assets/designs/for website-19.png" alt="Design 19" loading="lazy">
           </a>
         </li>
         <li>
           <a href="https://www.behance.net/gallery/225249403/AESTE-Reed-Diffusers" target="_blank">
-            <img src="/assets/designs/for website-16.png" alt="Design 15">
+            <img src="/assets/designs/for website-16.png" alt="Design 15" loading="lazy">
           </a>
         </li>
         
@@ -304,13 +300,6 @@ document.addEventListener('click', (e) => {
     }
   });
 });
-
-
-  window.addEventListener("load", function () {
-    const preloader = document.getElementById("preloader");
-    preloader.style.opacity = "0";
-    setTimeout(() => preloader.style.display = "none", 500);
-  });
 
 
 
