--- a/index.html
+++ b/index.html
@@ -52,46 +52,46 @@
     <h2>Featured Work</h2>
     <div class="floating-gallery-wrapper">
       <div class="floating-gallery">
-        <a href="#"><img src="/assets/designs/for website-01.png" alt="Design 1" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-02.png" alt="Design 2" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-03.png" alt="Design 3" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-04.png" alt="Design 4" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-05.png" alt="Design 5" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-06.png" alt="Design 6" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-07.png" alt="Design 7" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-08.png" alt="Design 8" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-09.png" alt="Design 9" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-10.png" alt="Design 10" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-11.png" alt="Design 11" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-12.png" alt="Design 12" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-13.png" alt="Design 13" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-14.png" alt="Design 14" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-15.png" alt="Design 15" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-16.png" alt="Design 16" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-17.png" alt="Design 17" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-18.png" alt="Design 18" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-19.png" alt="Design 19" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-01.webp" alt="Design 1" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-02.webp" alt="Design 2" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-03.webp" alt="Design 3" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-04.webp" alt="Design 4" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-05.webp" alt="Design 5" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-06.webp" alt="Design 6" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-07.webp" alt="Design 7" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-08.webp" alt="Design 8" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-09.webp" alt="Design 9" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-10.webp" alt="Design 10" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-11.webp" alt="Design 11" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-12.webp" alt="Design 12" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-13.webp" alt="Design 13" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-14.webp" alt="Design 14" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-15.webp" alt="Design 15" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-16.webp" alt="Design 16" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-17.webp" alt="Design 17" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-18.webp" alt="Design 18" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-19.webp" alt="Design 19" loading="lazy"/></a>
   
         <!-- Repeat again for looping -->
-        <a href="#"><img src="/assets/designs/for website-01.png" alt="Design 1" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-02.png" alt="Design 2" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-03.png" alt="Design 3" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-04.png" alt="Design 4" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-05.png" alt="Design 5" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-06.png" alt="Design 6" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-07.png" alt="Design 7" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-08.png" alt="Design 8" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-09.png" alt="Design 9" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-10.png" alt="Design 10" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-11.png" alt="Design 11" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-12.png" alt="Design 12" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-13.png" alt="Design 13" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-14.png" alt="Design 14" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-15.png" alt="Design 15" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-16.png" alt="Design 16" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-17.png" alt="Design 17" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-18.png" alt="Design 18" loading="lazy"/></a>
-        <a href="#"><img src="/assets/designs/for website-19.png" alt="Design 19" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-01.webp" alt="Design 1" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-02.webp" alt="Design 2" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-03.webp" alt="Design 3" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-04.webp" alt="Design 4" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-05.webp" alt="Design 5" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-06.webp" alt="Design 6" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-07.webp" alt="Design 7" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-08.webp" alt="Design 8" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-09.webp" alt="Design 9" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-10.webp" alt="Design 10" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-11.webp" alt="Design 11" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-12.webp" alt="Design 12" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-13.webp" alt="Design 13" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-14.webp" alt="Design 14" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-15.webp" alt="Design 15" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-16.webp" alt="Design 16" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-17.webp" alt="Design 17" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-18.webp" alt="Design 18" loading="lazy"/></a>
+        <a href="#"><img src="/assets/designs/for website-19.webp" alt="Design 19" loading="lazy"/></a>
       </div>
     </div>
   </section>
@@ -111,7 +111,7 @@
         <a href="https://www.instagram.com/designsby_sukaina/" target="_blank" class="btn">Follow me on Instagram ✦</a>
       </div>
       <div class="about-image-wrapper">
-        <img src="/assets/designbysukaina/designbysukaina.png" alt="Designer Portrait" class="about-image" loading="lazy" />
+        <img src="/assets/designbysukaina/designsbysukaina.webp" alt="Designer Portrait" class="about-image" loading="lazy" />
       </div>
     </div>
   </section>
@@ -139,32 +139,32 @@
       <ul>
         <li>
           <a href="https://www.behance.net/gallery/224998275/Sando-Japanese-Sandwich-Shop" target="_blank">
-            <img src="/assets/designs/for website-05.png" alt="Design 5" loading="lazy">
+            <img src="/assets/designs/for website-05.webp" alt="Design 5" loading="lazy">
           </a>
         </li>
         <li>
           <a href="https://www.behance.net/gallery/224997217/Chateau-" target="_blank">
-            <img src="/assets/designs/for website-02.png" alt="Design 2" loading="lazy">
+            <img src="/assets/designs/for website-02.webp" alt="Design 2" loading="lazy">
           </a>
         </li>
         <li>
           <a href="https://www.behance.net/gallery/219893401/Krumble-Bakehouse-" target="_blank">
-            <img src="/assets/designs/for website-06.png" alt="Design 6" loading="lazy">
+            <img src="/assets/designs/for website-06.webp" alt="Design 6" loading="lazy">
           </a>
         </li>
         <li>
           <a href="https://www.behance.net/gallery/225001045/ORYN-organic-skincare-" target="_blank">
-            <img src="/assets/designs/for website-14.png" alt="Design 14" loading="lazy">
+            <img src="/assets/designs/for website-14.webp" alt="Design 14" loading="lazy">
           </a>
         </li>
         <li>
           <a href="https://www.behance.net/gallery/197459517/BREW-LAB-Coffee-Cafe" target="_blank">
-            <img src="/assets/designs/for website-19.png" alt="Design 19" loading="lazy">
+            <img src="/assets/designs/for website-19.webp" alt="Design 19" loading="lazy">
           </a>
         </li>
         <li>
           <a href="https://www.behance.net/gallery/225249403/AESTE-Reed-Diffusers" target="_blank">
-            <img src="/assets/designs/for website-16.png" alt="Design 15" loading="lazy">
+            <img src="/assets/designs/for website-13.webp" alt="Design 15" loading="lazy">
           </a>
         </li>
         
