spply page fixed

--- a/apply.html
+++ b/apply.html
@@ -28,46 +28,46 @@
   <section class="form-wrapper">
     <div class="form-visual vertical-floating-gallery">
         <div class="floating-gallery-column">
-            <a href="#"><img src="/assets/designs/for website-01.png" alt="Design 1" /></a>
-        <a href="#"><img src="/assets/designs/for website-02.png" alt="Design 2" /></a>
-        <a href="#"><img src="/assets/designs/for website-03.png" alt="Design 3" /></a>
-        <a href="#"><img src="/assets/designs/for website-04.png" alt="Design 4" /></a>
-        <a href="#"><img src="/assets/designs/for website-05.png" alt="Design 5" /></a>
-        <a href="#"><img src="/assets/designs/for website-06.png" alt="Design 6" /></a>
-        <a href="#"><img src="/assets/designs/for website-07.png" alt="Design 7" /></a>
-        <a href="#"><img src="/assets/designs/for website-08.png" alt="Design 8" /></a>
-        <a href="#"><img src="/assets/designs/for website-09.png" alt="Design 9" /></a>
-        <a href="#"><img src="/assets/designs/for website-10.png" alt="Design 10" /></a>
-        <a href="#"><img src="/assets/designs/for website-11.png" alt="Design 11" /></a>
-        <a href="#"><img src="/assets/designs/for website-12.png" alt="Design 12" /></a>
-        <a href="#"><img src="/assets/designs/for website-13.png" alt="Design 13" /></a>
-        <a href="#"><img src="/assets/designs/for website-14.png" alt="Design 14" /></a>
-        <a href="#"><img src="/assets/designs/for website-15.png" alt="Design 15" /></a>
-        <a href="#"><img src="/assets/designs/for website-16.png" alt="Design 16" /></a>
-        <a href="#"><img src="/assets/designs/for website-17.png" alt="Design 17" /></a>
-        <a href="#"><img src="/assets/designs/for website-18.png" alt="Design 18" /></a>
-        <a href="#"><img src="/assets/designs/for website-19.png" alt="Design 19" /></a>
+            <a href="#"><img src="/assets/designs/for website-01.webp" alt="Design 1" /></a>
+        <a href="#"><img src="/assets/designs/for website-02.webp" alt="Design 2" /></a>
+        <a href="#"><img src="/assets/designs/for website-03.webp" alt="Design 3" /></a>
+        <a href="#"><img src="/assets/designs/for website-04.webp" alt="Design 4" /></a>
+        <a href="#"><img src="/assets/designs/for website-05.webp" alt="Design 5" /></a>
+        <a href="#"><img src="/assets/designs/for website-06.webp" alt="Design 6" /></a>
+        <a href="#"><img src="/assets/designs/for website-07.webp" alt="Design 7" /></a>
+        <a href="#"><img src="/assets/designs/for website-08.webp" alt="Design 8" /></a>
+        <a href="#"><img src="/assets/designs/for website-09.webp" alt="Design 9" /></a>
+        <a href="#"><img src="/assets/designs/for website-10.webp" alt="Design 10" /></a>
+        <a href="#"><img src="/assets/designs/for website-11.webp" alt="Design 11" /></a>
+        <a href="#"><img src="/assets/designs/for website-12.webp" alt="Design 12" /></a>
+        <a href="#"><img src="/assets/designs/for website-13.webp" alt="Design 13" /></a>
+        <a href="#"><img src="/assets/designs/for website-14.webp" alt="Design 14" /></a>
+        <a href="#"><img src="/assets/designs/for website-15.webp" alt="Design 15" /></a>
+        <a href="#"><img src="/assets/designs/for website-16.webp" alt="Design 16" /></a>
+        <a href="#"><img src="/assets/designs/for website-17.webp" alt="Design 17" /></a>
+        <a href="#"><img src="/assets/designs/for website-18.webp" alt="Design 18" /></a>
+        <a href="#"><img src="/assets/designs/for website-19.webp" alt="Design 19" /></a>
   
         <!-- Repeat again for looping -->
-        <a href="#"><img src="/assets/designs/for website-01.png" alt="Design 1" /></a>
-        <a href="#"><img src="/assets/designs/for website-02.png" alt="Design 2" /></a>
-        <a href="#"><img src="/assets/designs/for website-03.png" alt="Design 3" /></a>
-        <a href="#"><img src="/assets/designs/for website-04.png" alt="Design 4" /></a>
-        <a href="#"><img src="/assets/designs/for website-05.png" alt="Design 5" /></a>
-        <a href="#"><img src="/assets/designs/for website-06.png" alt="Design 6" /></a>
-        <a href="#"><img src="/assets/designs/for website-07.png" alt="Design 7" /></a>
-        <a href="#"><img src="/assets/designs/for website-08.png" alt="Design 8" /></a>
-        <a href="#"><img src="/assets/designs/for website-09.png" alt="Design 9" /></a>
-        <a href="#"><img src="/assets/designs/for website-10.png" alt="Design 10" /></a>
-        <a href="#"><img src="/assets/designs/for website-11.png" alt="Design 11" /></a>
-        <a href="#"><img src="/assets/designs/for website-12.png" alt="Design 12" /></a>
-        <a href="#"><img src="/assets/designs/for website-13.png" alt="Design 13" /></a>
-        <a href="#"><img src="/assets/designs/for website-14.png" alt="Design 14" /></a>
-        <a href="#"><img src="/assets/designs/for website-15.png" alt="Design 15" /></a>
-        <a href="#"><img src="/assets/designs/for website-16.png" alt="Design 16" /></a>
-        <a href="#"><img src="/assets/designs/for website-17.png" alt="Design 17" /></a>
-        <a href="#"><img src="/assets/designs/for website-18.png" alt="Design 18" /></a>
-        <a href="#"><img src="/assets/designs/for website-19.png" alt="Design 19" /></a>
+        <a href="#"><img src="/assets/designs/for website-01.webp" alt="Design 1" /></a>
+        <a href="#"><img src="/assets/designs/for website-02.webp" alt="Design 2" /></a>
+        <a href="#"><img src="/assets/designs/for website-03.webp" alt="Design 3" /></a>
+        <a href="#"><img src="/assets/designs/for website-04.webp" alt="Design 4" /></a>
+        <a href="#"><img src="/assets/designs/for website-05.webp" alt="Design 5" /></a>
+        <a href="#"><img src="/assets/designs/for website-06.webp" alt="Design 6" /></a>
+        <a href="#"><img src="/assets/designs/for website-07.webp" alt="Design 7" /></a>
+        <a href="#"><img src="/assets/designs/for website-08.webp" alt="Design 8" /></a>
+        <a href="#"><img src="/assets/designs/for website-09.webp" alt="Design 9" /></a>
+        <a href="#"><img src="/assets/designs/for website-10.webp" alt="Design 10" /></a>
+        <a href="#"><img src="/assets/designs/for website-11.webp" alt="Design 11" /></a>
+        <a href="#"><img src="/assets/designs/for website-12.webp" alt="Design 12" /></a>
+        <a href="#"><img src="/assets/designs/for website-13.webp" alt="Design 13" /></a>
+        <a href="#"><img src="/assets/designs/for website-14.webp" alt="Design 14" /></a>
+        <a href="#"><img src="/assets/designs/for website-15.webp" alt="Design 15" /></a>
+        <a href="#"><img src="/assets/designs/for website-16.webp" alt="Design 16" /></a>
+        <a href="#"><img src="/assets/designs/for website-17.webp" alt="Design 17" /></a>
+        <a href="#"><img src="/assets/designs/for website-18.webp" alt="Design 18" /></a>
+        <a href="#"><img src="/assets/designs/for website-19.webp" alt="Design 19" /></a>
       </div>
     </div>
     <div class="form-section">
