apply changed to enquire

--- a/apply.html
+++ b/apply.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apply – Designs by Sukaina</title>
+    <title>Enquire – Designs by Sukaina</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
@@ -24,7 +24,7 @@
       <nav>
         <!-- Navigation Links -->
         <a href="index.html">Home</a>
-        <a href="apply.html">Contact</a>
+        <a href="apply.html">Enquire Now</a>
       </nav>
     </header>
 
@@ -151,7 +151,7 @@
         </div>
       </div>
       <div class="form-section">
-        <h2>Apply to Work Together</h2>
+        <h2>Enquire to Work Together</h2>
         <p class="subtitle">
           Fill out the form and I’ll get back to you soon 💌
         </p>
