--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="#testimonials">Testimonials</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#packages">Packages</a>
-        <a href="apply.html">Contact</a>
+        <a href="apply.html">Enquire Now</a>
       </nav>
     </header>
     
@@ -42,7 +42,7 @@
       <div class="hero-content">
         <h1><span>Bringing Your Brand to Life, <br>One Box at a Time</span></h1>
         <p>Sweet and thoughtful packaging design that makes your products pop and your customers smile.</p>
-        <a href="apply.html" class="btn">Apply Now</a>
+        <a href="apply.html" class="btn">Enquire Now</a>
       </div>
       <div class="mascots">
         <img src="/assets/mascots/mascot-2.png" alt="Mascot 2">
@@ -252,7 +252,7 @@
 
     </div>
 
-    <a href="apply.html" class="btn">Apply Now</a>
+    <a href="apply.html" class="btn">Enquire Now</a>
   </section>
 
   <section id="instagram" class="section center">
